Sun Jan 10 04:54:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_class): raise TypeError same as class
	  statement.  [ruby-core:27504]

Sat Jan  9 08:40:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/configure.bat (WIN32DIR): regularise file separators.

Fri Jan  8 18:51:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_fwrite): preserve errno.  [ruby-core:27425]

Fri Jan  8 17:07:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_s_read): close the IO if an exception is raised on
	  seeking. [ruby-core:27429]

Fri Jan  8 17:02:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	 * ruby.h (RB_GC_GUARD_PTR): workaround for gcc optimization.
	   [ruby-core:27402]

Fri Jan  1 15:42:46 2010  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb: Fix build.  COUTFLAG is not yet landed on this
	  branch.

Fri Jan  1 00:47:57 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_instance_method_unimpl): Suppress
	  compiler warnings.

Fri Jan  1 00:36:55 2010  Akinori MUSHA  <knu@iDaemons.org>

	* string.c: Add instance methods to Symbol: succ, next, <=>,
	  casecmp, =~, [], slice, length, size, empty?, match, upcase,
	  downcase, capitalize and swapcase. [backport from 1.9]

Fri Jan  1 00:33:13 2010  Akinori MUSHA  <knu@iDaemons.org>

	* parse.y (dsym): Allow empty symbols. [merge from 1.9]

Fri Jan  1 00:12:52 2010  Akinori MUSHA  <knu@iDaemons.org>

	* object.c, intern.h: Export rb_sym_to_s.

Thu Dec 31 23:41:48 2009  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c: Remove a duplicated declaration.

Thu Dec 31 18:16:51 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c: include addrinfo.h only when using our own
	  getaddrinfo.c.

Thu Dec 31 05:56:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/extconf.rb: fix for wide-getaddrinfo option.

	* ext/socket/addrinfo.c: rename {addr,name}info functions to ensure
	  those are used on darwin.
