@@ -46,4 +46,111 @@ class TestMatrix < Test::Unit::TestCase
     assert_equal @m1.hash, @m2.hash
     assert_equal @m1.hash, @m3.hash
   end
+
+  def test_rank
+    [
+      [[0]],
+      [[0], [0]],
+      [[0, 0], [0, 0]],
+      [[0, 0], [0, 0], [0, 0]],
+      [[0, 0, 0]],
+      [[0, 0, 0], [0, 0, 0]],
+      [[0, 0, 0], [0, 0, 0], [0, 0, 0]],
+      [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]],
+    ].each do |rows|
+      assert_equal 0, Matrix[*rows].rank
+    end
+
+    [
+      [[1], [0]],
+      [[1, 0], [0, 0]],
+      [[1, 0], [1, 0]],
+      [[0, 0], [1, 0]],
+      [[1, 0], [0, 0], [0, 0]],
+      [[0, 0], [1, 0], [0, 0]],
+      [[0, 0], [0, 0], [1, 0]],
+      [[1, 0], [1, 0], [0, 0]],
+      [[0, 0], [1, 0], [1, 0]],
+      [[1, 0], [1, 0], [1, 0]],
+      [[1, 0, 0]],
+      [[1, 0, 0], [0, 0, 0]],
+      [[0, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [0, 0, 0], [0, 0, 0]],
+      [[0, 0, 0], [1, 0, 0], [0, 0, 0]],
+      [[0, 0, 0], [0, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [1, 0, 0], [0, 0, 0]],
+      [[0, 0, 0], [1, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [0, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [1, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]],
+      [[1, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]],
+      [[1, 0, 0], [1, 0, 0], [0, 0, 0], [0, 0, 0]],
+      [[1, 0, 0], [0, 0, 0], [1, 0, 0], [0, 0, 0]],
+      [[1, 0, 0], [0, 0, 0], [0, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [1, 0, 0], [1, 0, 0], [0, 0, 0]],
+      [[1, 0, 0], [0, 0, 0], [1, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [1, 0, 0], [0, 0, 0], [1, 0, 0]],
+      [[1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0]],
+
+      [[1]],
+      [[1], [1]],
+      [[1, 1]],
+      [[1, 1], [1, 1]],
+      [[1, 1], [1, 1], [1, 1]],
+      [[1, 1, 1]],
+      [[1, 1, 1], [1, 1, 1]],
+      [[1, 1, 1], [1, 1, 1], [1, 1, 1]],
+      [[1, 1, 1], [1, 1, 1], [1, 1, 1], [1, 1, 1]],
+    ].each do |rows|
+      matrix = Matrix[*rows]
+      assert_equal 1, matrix.rank
+      assert_equal 1, matrix.transpose.rank
+    end
+
+    [
+      [[1, 0], [0, 1]],
+      [[1, 0], [0, 1], [0, 0]],
+      [[1, 0], [0, 1], [0, 1]],
+      [[1, 0], [0, 1], [1, 1]],
+      [[1, 0, 0], [0, 1, 0]],
+      [[1, 0, 0], [0, 0, 1]],
+      [[1, 0, 0], [0, 1, 0], [0, 0, 0]],
+      [[1, 0, 0], [0, 0, 1], [0, 0, 0]],
+
+      [[1, 0, 0], [0, 0, 0], [0, 1, 0]],
+      [[1, 0, 0], [0, 0, 0], [0, 0, 1]],
+
+      [[1, 0], [1, 1]],
+      [[1, 2], [1, 1]],
+      [[1, 2], [0, 1], [1, 1]],
+    ].each do |rows|
+      m = Matrix[*rows]
+      assert_equal 2, m.rank
+      assert_equal 2, m.transpose.rank
+    end
+
+    [
+      [[1, 0, 0], [0, 1, 0], [0, 0, 1]],
+      [[1, 1, 0], [0, 1, 1], [1, 0, 1]],
+      [[1, 1, 0], [0, 1, 1], [1, 0, 1]],
+      [[1, 1, 0], [0, 1, 1], [1, 0, 1], [0, 0, 0]],
+      [[1, 1, 0], [0, 1, 1], [1, 0, 1], [1, 1, 1]],
+      [[1, 1, 1], [1, 1, 2], [1, 3, 1], [4, 1, 1]],
+    ].each do |rows|
+      m = Matrix[*rows]
+      assert_equal 3, m.rank
+      assert_equal 3, m.transpose.rank
+    end
+  end
+
+  def test_inverse
+    assert_equal(Matrix[[-1, 1], [0, -1]], Matrix[[-1, -1], [0, -1]].inverse)
+  end
+
+  def test_determinant
+    assert_equal(45, Matrix[[7,6], [3,9]].determinant)
+    assert_equal(-18, Matrix[[2,0,1],[0,-2,2],[1,2,3]].determinant)
+  end
 end
