@@ -1,3 +1,13 @@
+Sun Jan 10 05:35:26 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/matrix.rb (Matrix#inverse_from): use #quo. backported r9490.
+
+	* lib/matrix.rb (Matrix#determinant): ditto.  [ruby-core:27507]
+
+	* lib/matrix.rb (Matrix#rank): ditto.
+
+	* lib/matrix.rb (Matrix::Scalar#initialize): ditto.
+
 Sun Jan 10 04:54:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* class.c (rb_define_class): raise TypeError same as class
